--- a/css/style.css
+++ b/css/style.css
@@ -50,12 +50,14 @@ body {
 }
 
 .articleList .articleList__items {
-  padding-top: 1px;
   background-color: #fff;
 }
 
-.articleList .articleList__link {
+.articleList .articleList__item + .articleList__item {
   margin-top: -1px;
+}
+
+.articleList .articleList__link {
   display: block;
   padding: 16px;
   border-top: 1px solid #eaeaea;
